# cv-api

./: .env.example  .gitignore  README.md  inference.py  main.py  pyproject.toml  settings.py  train.py
cv_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
